syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common.proto";

package refresh_token;

service RefreshToken {
  rpc Create (RefreshTokenRequest) returns (RefreshTokenRequest) {};
  rpc FindOne(RefreshTokenRequest) returns (RefreshTokenRequest) {};
  rpc FindAll (common.Empty) returns (RefreshTokenListRequest) {};
  rpc Update (RefreshTokenRequest) returns (RefreshTokenRequest) {};
  rpc Destroy (RefreshTokenRequest) returns (RefreshTokenRequest) {};
}

message RefreshTokenRequest {
  string id = 1;
  string client_id = 2;
  string user_id = 3;
  string token = 4;
  string scope = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message RefreshTokenListRequest {
  repeated RefreshTokenRequest refresh_tokens = 1;
}
